[package]
name = "didrte-rs"
version = "0.1.0"
edition = "2018"
authors = ["Kyrylo Shpytsya <kshpitsa@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kshpytsya/didrte-rs/"
repository = "https://github.com/kshpytsya/didrte-rs/"
description = "placeholder"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
