[package]
name = "didrte"
version = "0.1.2-alpha.0"
edition = "2018"
authors = ["Kyrylo Shpytsya <kshpitsa@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kshpytsya/didrte-rs/"
repository = "https://github.com/kshpytsya/didrte-rs/"
description = "placeholder"


[dependencies]
tempfile = "3.1.0"
thiserror = "1.0.14"
